fixed spacing

--- a/projects/ccl/css/style.css
+++ b/projects/ccl/css/style.css
@@ -279,7 +279,6 @@ a:active {
   width: 80%;
   height: 75%;
   left: 10%;
-  top: 10%;
   border-bottom: 1px solid #FFF;
   border-top: 1px solid #FFF;
   -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
@@ -300,7 +299,7 @@ a:active {
   position: relative;
   -webkit-transition: all 0.35s;
   transition: all 0.35s;
-  /* margin-bottom: 20px; */
+  margin-bottom: 0px;
 }
 .hovereffect:hover img {
   filter: brightness(0.6);
